--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -11,12 +11,42 @@
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 4px !important;
-  margin-left: 22%;
+  margin-left: auto;
   width: max-content;
   height: max-content;
   &:hover, &:focus {
     background: #7D1710 !important;
     text-decoration: none;
     color: white;
+  }
+}
+
+
+// Smallest device
+@media (min-width: 100px) and (max-width: 575px) {
+  .banner-btn{
+    margin-left: 35%;
+  }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 767px) and (min-width: 576px) {
+  .banner-btn{
+    margin-left: 25%;
+  }
+}
+
+
+// Medium devices (tablets, 768px and up)
+@media (max-width: 992px) and(min-width: 768px) {
+  .banner-btn{
+    margin-left: 27%;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (max-width: 1200px) and (min-width: 992px) {
+  .banner-btn{
+    margin-left: 22%;
   }
 }
